@startuml
skinparam linetype ortho

entity "app_user" {
    * **id: bigserial <<PK>>**
    * **org_unit_id: bigint <<FK>>**
    * **role_id: bigint <<FK>>**
    ---
    * username: varchar
    * first_name: varchar
    * last_name: varchar
    * email_address: varchar
    signature: varchar
}

entity "role" {
    * **id: bigserial <<PK>>**
    ---
    * name: varchar
}

entity "report_data" {
    * **id: bigserial <<PK>>**
    * **author_id: bigint <<FK>>**
    ---
    * from_date: date
    * department: varchar
    * training_year: smallint
    * is_approved: bool
    work_text: varchar
    external_text: varchar
    school_text: varchar
    created_at: timestamptz
    updated_at: timestamptz
}

entity "report_comment" {
    * **id: bigserial <<PK>>**
    * **report_id: bigint <<FK>>**
    * **user_id: bigint <<FK>>**
    ---
    * comment: varchar
    * created_at: timestamptz
}

entity "org_unit" {
    * **id: bigserial <<PK>>**
    ---
    * unit_name: varchar
}

entity "notification_history" {
    * **id: bigserial <<PK>>**
    * **report_id: bigint <<FK>>**
    * **recipient_id: bigint <<FK>>**
    ---
    * sent_at: timestamptz
}

app_user }|--|| org_unit
app_user }|--|| report_data
app_user }|--|| report_comment
app_user }|--|| notification_history
app_user }|--|| role
report_data }|--|| report_comment
report_data }|--|| notification_history

@enduml
